[project]
name = "gaia-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aleph-alpha-client>=8.1.0",
    "brave-search>=0.1.8",
    "requests>=2.32.3",
    "rich>=13.9.4",
    "ruff>=0.8.4",
    "trafilatura>=2.0.0",
    "types-requests>=2.32.0.20241016",
]
